my-chart/templates/db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    app: postgres
spec:
  containers:
    - name: postgres
      image: postgres:15-alpine
      ports:
        - containerPort: 5432
