my-chart/templates/python-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-dashboard
  labels:
    app: dashboard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: python-app
          image: my-python-dashboard:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
