my-chart/templates/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  selector:
    app: dashboard
  ports:
    - port: 5000
      targetPort: 5000
